--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,11 @@ body {
 .section {
 	width: 100vw;
 	height: fit-content;
+	
+	display: flex;
+	flex-direction: column;
 
+	align-items: center;
 }
 
 /* box é uma caixa vísivel para o conteúdo */ 
