--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
 	padding: 0px;
 }
 
+a {
+	text-decoration: none;
+}
+
 /* conteiner é a div raiz da página */
 .conteiner {
 	width: 100vw;
@@ -59,6 +63,27 @@ body {
 .box {
 	width: 25vw;
 	height: fit-content;
+}
+
+.div-btn {
+	width: 25vw;
+	height: fit-content;
+	min-height: 10vh;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	background-color: var(--surface);
+
+	border-radius: 5vh;
+	margin: 1vh;
+	
+	transition: ease-in-out .2s;
+}
+
+.div-btn:hover {
+	scale: 1.1;
 }
 
 .titulo-peach {
