--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ body {
 .titulo-principal {
 	font-size: 48pt;
 	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bolder;
 	width: 25vw;
 	text-align: center;
 	
@@ -164,13 +165,23 @@ body {
 .titulo-peach {
 	font-size: 32pt;
 	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bolder;
 
 	color: var(--peach);
+}
+
+.titulo-mauve {
+	font-size: 32pt;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bolder;
+
+	color: var(--mauve);
 }
 
 .titulo-base {
 	font-size: 32pt;
 	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bolder;
 
 	color: var(--base);
 }
