--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
 	padding: 0px;
 }
 
+a {
+	text-decoration: none;
+}
+
 /* conteiner é a div raiz da página */
 .conteiner {
 	width: 100vw;
@@ -43,6 +47,20 @@ body {
 	justify-content: center;
 
 	background-color: var(--base);
+}
+
+.section-surface {
+	width: 100vw;
+	height: fit-content;
+	min-height: 25vh;
+	
+	display: flex;
+	flex-direction: column;
+
+	align-items: center;
+	justify-content: center;
+
+	background-color: var(--surface);
 }
 
 .section-branca {
@@ -119,6 +137,7 @@ body {
 	font-size: 16pt;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
+	text-decoration: none;
 }
 
 .texto-btn-inv {
@@ -126,6 +145,7 @@ body {
 	font-size: 16pt;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
+	text-decoration: none;
 }
 
 .btn-texto-puro {
@@ -180,17 +200,25 @@ body {
 	color: var(--peach);
 }
 
+.titulo-mauve {
+	font-size: 32pt;
+	font-family: Arial, Helvetica, sans-serif;
+
+	color: var(--mauve);
+}
+
+.titulo-branco {
+	font-size: 32pt;
+	font-family: Arial, Helvetica, sans-serif;
+
+	color: var(--text);
+}
+
 .titulo-base {
 	font-size: 32pt;
 	font-family: Arial, Helvetica, sans-serif;
 
 	color: var(--base);
-}
-
-
-.destacar-frase {
-		color: #ca9ee6; 
-		font-family: Arial, Helvetica, sans-serif;
 }
 
 
