--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@ a {
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 	width: 40vw;
+	
 
 	margin-bottom: 10vh;
 }
@@ -232,6 +233,16 @@ a {
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 	width: var(--largura-paragrafo)
+}
+
+.paragrafo-grid {
+	color: var(--text);
+	font-size: 18pt;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: justify;
+	
+
+	margin-bottom: 10vh;
 }
 
 /* MENUS */
@@ -251,4 +262,32 @@ a {
 	flex-direction: row;
 	text-align: center;
 	gap: 20vh;
+}
+
+/* grade */
+
+.grid {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
+	grid-auto-flow: row;
+
+	row-gap: 5vh;
+	column-gap: 5vw;
+}
+
+.frame {
+	width: 33vw;
+	min-height: fit-content;
+	min-height: 10vh;
+
+	display: flex;
+	flex-direction: column;
+
+	align-items: center;
+
+	border-radius: 10pt;
+	padding: 1vh;
+
+	background-color: var(--surface);
 }
