--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ a {
 	font-size: 18pt;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: justify;
-	
+	width: 30vw;
 
 	margin-bottom: 10vh;
 }
