--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@
 	--blue: #8caaee;
 	--teal: #81c8be;
 	--peach: #ef9f76;
-	--red: #db9dff;
-	--mauve: #db9dff;
+	--lilac: #db9dff;
 
 	/* espacamentos  */
 	--largura-paragrafo: 50vw;
@@ -171,7 +170,7 @@ a {
 	width: 65vw;
 	text-align: center;
 
-	color: var(--mauve);
+	color: var(--lilac);
 
 	margin-top: 15vh;
 	margin-bottom: 5vh;
@@ -188,7 +187,7 @@ a {
 	font-size: 32pt;
 	font-family: Arial, Helvetica, sans-serif;
 
-	color: var(--mauve);
+	color: var(--lilac);
 }
 
 .titulo-mauve h2 {
@@ -274,7 +273,7 @@ a {
 
 .menu-topo {
 	width: 100%;
-	background-color: var(--red);
+	background-color: var(--lilac);
 	height: 10vh;
 	text-decoration-thickness: 50%;
 	display: flex;
@@ -347,7 +346,7 @@ a {
 	font-family: Arial, Helvetica, sans-serif;
 	height: 5vh;
 
-	color: var(--mauve);
+	color: var(--lilac);
 }
 
 .frame-contato img{
